--- a/Parte 1/tsconfig.json
+++ b/Parte 1/tsconfig.json
@@ -3,14 +3,7 @@
     "target": "es5",
     "module": "commonjs",
     "rootDir": "./",
-    "baseUrl": "./src",
-    "paths": {
-      "@modules/*": ["modules/*"],
-      "@config/*": ["config/*"],
-      "@shared/*": ["shared/*"],
-      "@errors/*": ["errors/*"],
-      "@utils/*": ["utils/*"]
-    },
+    "paths": {},
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
