--- a/Parte 2/package.json
+++ b/Parte 2/package.json
@@ -5,18 +5,26 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --inspect --transpile-only src/server.ts",
-    "typeorm": "ts-node node_modules/typeorm/cli.js"
+    "typeorm": "ts-node node_modules/typeorm/cli.js",
+    "test": "jest"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.23",
+    "@types/supertest": "^2.0.11",
+    "@types/swagger-ui-express": "^4.1.2",
     "@types/uuid": "^8.3.0",
+    "ts-jest": "^26.5.6",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
   },
   "dependencies": {
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "jest": "^26.6.3",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
+    "swagger-ui-express": "^4.1.6",
     "typeorm": "^0.2.32",
     "uuid": "^8.3.2"
   }
